# things

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  fake_usb.img.bz2
.github/workflows/: build.yml
cmake/: Cache.cmake  Sanitizers.cmake  Warnings.cmake  spdlog.cmake
include/: DetectDrives.hpp  ID.hpp  Precompiled.hpp  UUID.hpp
scripts/: extract-fake-img-and-mount.sh  umount-fake-img.sh
src/: DetectDrivesMock.cpp  DetectDrivesWindows.cpp  ID.cpp  UUID.cpp  main.cpp
